<resources>
    <string name="app_name">Hospital Ebook</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="sign_in"> Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="change_password">Change Password</string>
    <string name="action_settings">Settings</string>
    <string name="undo" />
    <string name="eraser" />
    <string name="stroke" />
    <string name="redo" />
    <string name="colors" />
    <string name="title" />
    <string name="add_reminder">Add reminder</string>
    <string name="content">Content</string>
    <string name="stroke_size">stroke size</string>
    <string name="opacity">Opacity</string>
    <string name="saturation">Saturation</string>
    <string name="erase_sketch">Erase sketch?</string>
    <string name="confirm">Confirm</string>
    <string name="gallery" />
    <string name="share" />
    <string name="handwriting"> Hospital Ebook </string>
    <string name="version">Version-1.0</string>
    <string name="feature_not_available_on_this_device">Feature unavailable on this device, sorry</string>
    <string name="scan">Scan</string>
    <string name="connection">Server Name</string>
    <string name="institution">Institution</string>
    <string name="exit_text"> Do you want to exit? </string>
    <string name="contact">Block 6 Unit 5 | 73th Street, Mingalar Mandalay
        Chanmyathazi Township | Mandalay, Myanmar</string>
    <string name="email_address">support@anzer.com</string>
    <string name="website">www.anzer.com</string>

    <string-array name="register_type">
        <item>All Register Type</item>
        <item>Outpatient</item>
        <item>Inpatient</item>
        <item>Emergency</item>
        <item>Day Surgery</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
