<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:background="@drawable/curved_shape_for_dialog">

    <RelativeLayout
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            android:paddingBottom="10dp"
            android:background="#8FBC8F">
            <TextView
                android:layout_width="wrap_content"
                android:text="Contact Us"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imageView_exit" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/dialog_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="0dp"
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:paddingLeft="35dp"
            android:paddingRight="30dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/address_icon"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:layout_marginTop="15dp"
            android:paddingLeft="35dp"
            android:paddingRight="30dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:drawableLeft="@drawable/email_icon"
            android:layout_below="@id/address"/>

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website"
            android:layout_marginTop="10dp"
            android:paddingLeft="35dp"
            android:paddingRight="30dp"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:drawableLeft="@drawable/website_icon"
            android:layout_below="@id/email"/>
    </RelativeLayout>
    <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="150dp"-->
        <!--android:gravity="right">-->

        <!--<Button-->
            <!--android:id="@+id/cancel"-->
            <!--style="?android:attr/borderlessButtonStyle"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="Cancel"-->
            <!--android:textAllCaps="false"-->
            <!--android:textStyle="bold"-->
            <!--android:textColor="@color/dialog_button_color"/>-->

        <!--<Button-->
            <!--android:id="@+id/submit"-->
            <!--style="?android:attr/borderlessButtonStyle"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="right"-->
            <!--android:text="OK"-->
            <!--android:textAllCaps="false"-->
            <!--android:textStyle="bold"-->
            <!--android:textColor="@color/dialog_button_color"-->
            <!--android:layout_toRightOf="@id/cancel"/>-->
    <!--</RelativeLayout>-->
</RelativeLayout>