<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#fbfbfb"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/logo_panel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="70dp"
                android:padding="10dp"
                android:gravity="center"
                android:elevation="4dp"
                android:background="#00ffffff">
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/anzer_logo"
                    android:layout_marginBottom="2dp"/>

            </RelativeLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/logo_panel"
                android:textOn="Nurse"
                android:textOff="Doctor"
                android:thumb="@drawable/sw_thumb"
                app:track="@drawable/sw_track"
                app:showText="true"/>

            <RelativeLayout
                android:id="@+id/login_panel"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/curved_shape"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:elevation="4dp"
                android:padding="20dp"
                android:layout_below="@+id/switch_button">

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:focusableInTouchMode="true"
                    android:focusable="true">

                    <TextView
                        android:id="@+id/label_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/username"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/login_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/label_username"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/login_username2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/table_cell_bg"
                            android:hint="Username"
                            android:drawableStart="@drawable/username_logo"
                            android:paddingLeft="3dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:singleLine="true"
                            android:layout_weight = "3" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/label_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:layout_marginTop="15dp"
                        android:layout_below="@+id/login_username"
                        />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/login_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/label_password"
                        app:passwordToggleEnabled="true"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false"
                        app:errorEnabled="false">
                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/login2_password"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:background="@drawable/table_cell_bg"
                                android:hint="Password"
                                android:drawableStart="@drawable/password_logo"
                                android:paddingLeft="3dp"
                                android:autoText="false"
                                android:editable="true"
                                android:imeOptions="flagNoExtractUi"
                                android:selectAllOnFocus="true"
                                android:singleLine="true"
                                android:layout_weight = "3" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <CheckBox
                        android:id="@+id/remember_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_me"
                        android:padding="10dp"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_marginTop="3dp"
                        android:layout_below="@+id/login_password" />


                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:paddingRight = "20dp"
                        android:paddingTop="15dp"
                        android:paddingBottom="15dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginBottom="0dp"
                        android:background="@drawable/login_button_background"
                        android:text= "@string/sign_in"
                        android:layout_gravity="center"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textColor="#000000"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_below="@+id/remember_username"
                        android:layout_centerHorizontal="true"
                        android:drawableLeft="@drawable/login_icon"
                        android:drawablePadding="10dp"/>

                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/server_management_panel"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/curved_shape"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:elevation="4dp"
                android:paddingBottom="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_below="@+id/login_panel">
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="20dp"
                    android:layout_marginTop="10dp">

                    <!--<TextView-->
                        <!--android:id="@+id/label_connection"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:text="@string/connection"-->
                        <!--android:textColor="#000000"-->
                        <!--android:textSize="16sp"-->
                        <!--android:textStyle="bold"-->
                        <!--/>-->

                    <!--<android.support.design.widget.TextInputLayout-->
                        <!--android:id="@+id/txt_connection"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="5dp"-->
                        <!--android:layout_below="@+id/label_connection"-->
                        <!--app:hintAnimationEnabled="false"-->
                        <!--app:hintEnabled="false">-->
                        <!--<TextView-->
                            <!--android:id="@+id/txt_connection2"-->
                            <!--android:layout_width="match_parent"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:background="@drawable/table_cell_bg"-->
                            <!--android:hint="Server Name"-->
                            <!--android:gravity="center_vertical"-->
                            <!--android:paddingLeft="8dp"-->
                            <!--android:paddingTop="10dp"-->
                            <!--android:paddingBottom="10dp"-->
                            <!--android:singleLine="true"-->
                            <!--android:textSize="18dp"-->
                            <!--android:drawableStart="@drawable/server_icon"-->
                            <!--android:drawablePadding="3dp"-->
                            <!--android:layout_weight = "3"/>-->
                    <!--</android.support.design.widget.TextInputLayout>-->

                    <!--<View-->
                        <!--android:id="@+id/view1"-->
                        <!--android:layout_width="500dp"-->
                        <!--android:layout_height="2dp"-->
                        <!--android:layout_below="@+id/txt_connection"-->
                        <!--android:layout_margin="5dp"-->
                        <!--android:background="@android:color/darker_gray" />-->

                    <TextView
                        android:id="@+id/label_institution"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:text="@string/institution"
                        android:textColor="#000000"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txt_institution"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_below="@+id/label_institution"
                        app:hintAnimationEnabled="false"
                        app:hintEnabled="false">
                        <TextView
                            android:id="@+id/txt_institution_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/table_cell_bg"
                            android:hint="Institution"
                            android:gravity="center_vertical"
                            android:paddingLeft="5dp"
                            android:paddingTop="8dp"
                            android:paddingBottom="8dp"
                            android:layout_marginBottom="25dp"
                            android:singleLine="true"
                            android:drawableStart="@drawable/hospital_institution"
                            android:layout_weight = "3"
                            android:textSize="18dp"/>
                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>
            </RelativeLayout>

        </RelativeLayout>
</ScrollView>
